Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29099

Missing capitalization in the error message from ER_DATA_OUT_OF_RANGE template

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • N/A
    • 10.10.1
    • Server
    • None

    Description

      Set to "critical" as a technicality, to follow the procedure for preview branches.

      preview-10.10-misc a5f44a81b

      MariaDB [test]> select random_bytes(1025);
      ERROR 1690 (22003): length value is out of range in 'random_bytes(1025)'
      

      Normally error messages should start with a capital letter.

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 20m
                  20m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.